--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {// enforce compilation compatibility with Java version 8
 
 ext.androidx_version = '2.3.0'
 ext.lifecycle_version = '2.2.0'
+ext.koin_version = '2.1.6'
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -58,4 +59,9 @@ dependencies {
     implementation('com.github.thekhaeng:pushdown-anim-click:1.1.1') {
         exclude group: 'com.android.support'
     }
+
+    // Koin
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    implementation "org.koin:koin-androidx-fragment:$koin_version"
 }
